fixing padding on contact page

--- a/src/components/form/contact-form.css
+++ b/src/components/form/contact-form.css
@@ -31,7 +31,7 @@
     color: rgb(69, 69, 69);
     margin: 10px 0; 
     margin-left: 50px; 
-    padding: 10px;
+    padding: 10px !important;
     padding-left: -5px;
     background-color: rgb(197, 197, 197);
     border-radius: 20px;
